dbus (1.0.2-5) unstable; urgency=low

  * debian/dbus.init
    + Add some safety checks and support for file-rc. (Closes: #419984)
  * debian/control
    + Revise package description of dbus-1-utils. (Closes: #404981)

 -- Michael Biebl <biebl@debian.org>  Mon, 23 Apr 2007 00:15:42 +0200

dbus (1.0.2-4) unstable; urgency=low

  * debian/dbus.init
    + Properly quote the runlevel variable $r. (Closes: #419818)
  * debian/dbus.prerm
    + Removed empty maintainer script.

 -- Michael Biebl <biebl@debian.org>  Wed, 18 Apr 2007 19:16:13 +0200

dbus (1.0.2-3) unstable; urgency=low

  * debian/dbus.post{inst,rm}
    + Restart dbus on upgrades again. Might break some applications, but they
      should be fixed.
  * debian/dbus.init
    + Don't return an error, if start is called when there is already a bus
      running.
  * debian/dbus.init
    + Handle errors from /sbin/runlevel. Fixes dbus installation in chroots.
      (Closes: #419655)

 -- Sjoerd Simons <sjoerd@debian.org>  Tue, 17 Apr 2007 17:55:14 +0200

dbus (1.0.2-2) unstable; urgency=low

  [ Sebastian Dröge ]
  * debian/control:
    + Updated to use my debian.org mail address

  [ Michael Biebl ]
  * debian/control
    + Add XS-Vcs-* fields.
    + Add myself to Uploaders.
    + Update description.
  * debian/watch
    + Added. Allows to track upstream releases.
  * debian/dbus.init
    + Add functionality to start/stop dbus dependent services based on their 
      LSB header.
      Instead of installing an init script into /etc/dbus-1/event.d, services
      depending on dbus should from now on install a regular sysv init script
      and add an LSB header with "Required-Start: dbus".

 -- Michael Biebl <biebl@debian.org>  Fri, 13 Apr 2007 00:56:54 +0200

dbus (1.0.2-1) unstable; urgency=high

  * New upstream release:
    + Urgency set to high because it fixes a local denial of service
      exploit involving removal of match rules from other apps.
      This effects all versions of D-Bus. CVE-2006-6107