@@ -10,9 +10,10 @@ XS-Vcs-Browser: http://svn.debian.org/wsvn/pkg-utopia/packages/unstable/dbus
 
 Package: dbus
 Architecture: any
-Depends: ${shlibs:Depends}, adduser, debianutils (>= 1.22.0), lsb-base (>= 3.1)
-Conflicts: libdbus0, dbus-1, dbus-1-utils (<< 0.50-2), libdbus-1-1
-Replaces: libdbus0, dbus-1
+Depends: ${shlibs:Depends}, adduser, debianutils (>= 1.22.0), lsb-base (>= 3.1), dbus-x11
+Conflicts: libdbus0, dbus-1, dbus-1-utils (<< 1.0.2-5), libdbus-1-1
+Replaces: libdbus0, dbus-1, dbus-1-utils (<< 1.0.2-5)
+Provides: dbus-1-utils
 Description: simple interprocess messaging system
  D-Bus is a message bus, used for sending messages between
  applications.  Conceptually, it fits somewhere in between raw sockets
@@ -26,9 +27,26 @@ Description: simple interprocess messaging system
  .
  It comes with several bindings, including GLib, Python, Qt and Java.
  .
- This package contains the D-Bus daemon; the client-side library can
- be found in the libdbus-1-3 package, as it is no longer contained in
- this package.
+ This package contains the D-Bus daemon and related utilities; 
+ .
+ The client-side library can be found in the libdbus-1-3 package, as it is no
+ longer contained in this package.
+
+Package: dbus-x11
+Architecture: any
+Section: x11
+Depends: ${shlibs:Depends}, dbus
+Conflicts: dbus (<< 1.0.2-5)
+Replaces: dbus (<< 1.0.2-5)
+Description: simple interprocess messaging system (X11 deps)
+ D-Bus is a message bus, used for sending messages between
+ applications.  Conceptually, it fits somewhere in between raw sockets
+ and CORBA in terms of complexity.
+ .
+ This package contains the dbus-lauch utitility which is necessary for
+ packages using a D-Bus session bus.
+ .
+ See the dbus description for more information about D-Bus in general.
 
 Package: libdbus-1-3
 Architecture: any
@@ -50,19 +68,6 @@ Description: simple interprocess messaging system
  It comes with several bindings, including GLib, Python, Qt and Java.
  .
  The daemon can be found in the dbus package.
-
-Package: dbus-1-utils
-Architecture: any
-Section: utils
-Depends: ${shlibs:Depends}, dbus
-Description: simple interprocess messaging system (utilities)
- D-Bus is a message bus, used for sending messages between
- applications.  Conceptually, it fits somewhere in between raw sockets
- and CORBA in terms of complexity.
- .
- This package contains D-Bus related utilities like dbus-monitor.
- .
- See the dbus description for more information about D-Bus in general.
 
 Package: dbus-1-doc
 Section: doc
