@@ -1,2 +1,0 @@
-debian/tmp/usr/bin/dbus-monitor
-debian/tmp/usr/share/man/man1/dbus-monitor.1
