@@ -1,0 +1,2 @@
+debian/tmp/usr/bin/dbus-launch
+debian/tmp/usr/share/man/man1/dbus-launch.1
