@@ -2,12 +2,12 @@ debian/tmp/var/run/dbus
 debian/tmp/etc/dbus-1/
 debian/tmp/usr/bin/dbus-daemon
 debian/tmp/usr/bin/dbus-cleanup-sockets
-debian/tmp/usr/bin/dbus-launch
 debian/tmp/usr/bin/dbus-send
 debian/tmp/usr/bin/dbus-uuidgen
+debian/tmp/usr/bin/dbus-monitor
 debian/tmp/usr/share/man/man1/dbus-daemon.1
 debian/tmp/usr/share/man/man1/dbus-cleanup-sockets.1
 debian/tmp/usr/share/dbus-1/services
-debian/tmp/usr/share/man/man1/dbus-launch.1
 debian/tmp/usr/share/man/man1/dbus-send.1
 debian/tmp/usr/share/man/man1/dbus-uuidgen.1
+debian/tmp/usr/share/man/man1/dbus-monitor.1
