@@ -15,10 +15,9 @@ DEB_CONFIGURE_EXTRA_FLAGS := --enable-xml-docs --enable-doxygen-docs
 
 DEB_SHLIBDEPS_INCLUDE_dbus-1-utils := debian/libdbus-1-3/usr/lib/ 
 
-binary-post-install/dbus::
-	mkdir -p debian/dbus/etc/dbus-1/event.d
-	mkdir -p debian/dbus/etc/X11/Xsession.d
-	cp debian/dbus-Xsession debian/dbus/etc/X11/Xsession.d/75dbus_dbus-launch
+binary-post-install/dbus-x11::
+	mkdir -p debian/dbus-x11/etc/X11/Xsession.d
+	cp debian/dbus-Xsession debian/dbus-x11/etc/X11/Xsession.d/75dbus_dbus-launch
 
 build/dbus-1-doc::
 	doxygen Doxyfile
